force-app/main/default/objects/Job__c/Job__c.object-meta.xml
<CustomObject>
    <label>Job</label>
    <nameField>
        <label>Job Form Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>