force-app/main/default/objects/Job__c/fields/About_Previos_Job__c.field-meta.xml
<CustomField>
    <fullName>About_Previos_Job__c</fullName>
    <label>About Previos Job</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>