force-app/main/default/objects/Job__c/fields/Job_Status__c.field-meta.xml
<CustomField>
    <fullName>Job_Status__c</fullName>
    <inlineHelpText>&quot;Employed&quot;/&quot;UnEmployed&quot;</inlineHelpText>
    <label>Job Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Employed</fullName>
            </value>
            <value>
                <fullName>UnEmployed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>