force-app/main/default/objects/Job__c/fields/Languages_Known__c.field-meta.xml
<CustomField>
    <fullName>Languages_Known__c</fullName>
    <label>Languages_Known</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>C++</fullName>
            </value>
            <value>
                <fullName>Java</fullName>
            </value>
            <value>
                <fullName>Python</fullName>
            </value>
            <value>
                <fullName>Apex</fullName>
            </value>
            <value>
                <fullName>LWC</fullName>
            </value>
            <value>
                <fullName>.Net</fullName>
            </value>
            <value>
                <fullName>C#</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>