force-app/main/default/objects/Job__c/fields/Last_6_months_Applied_this_role__c.field-meta.xml
<CustomField>
    <fullName>Last_6_months_Applied_this_role__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Last 6 months Applied this role</label>
    <type>Checkbox</type>
</CustomField>