force-app/main/default/objects/Job__c/fields/Test_look__c.field-meta.xml
<CustomField>
    <fullName>Test_look__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Test look</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Checks</relationshipLabel>
    <relationshipName>Contact</relationshipName>
    <type>Lookup</type>
</CustomField>