force-app/main/default/objects/Job__c/validationRules/Job_Form_Fname.validationRule-meta.xml
<ValidationRule>
    <fullName>Job_Form_Fname</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( First_Name__c )</errorConditionFormula>
    <errorMessage>First Nmae is *</errorMessage>
</ValidationRule>