force-app/main/default/objects/Job__c/validationRules/Job_Form_IND_Experience.validationRule-meta.xml
<ValidationRule>
    <fullName>Job_Form_IND_Experience</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL( Country__c , &quot;India&quot;),
  OR(
    VALUE(TEXT( Experience__c )) &lt; 1,
    VALUE(TEXT( Experience__c )) &gt; 19
  )
)</errorConditionFormula>
    <errorDisplayField>Experience__c</errorDisplayField>
    <errorMessage>We need 1 to 19yrs of experience candidates only in india</errorMessage>
</ValidationRule>