force-app/main/default/objects/Job__c/validationRules/Job_Form_Sal_Exp.validationRule-meta.xml
<ValidationRule>
    <fullName>Job_Form_Sal_Exp</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK ( Salary_Expected__c )</errorConditionFormula>
    <errorDisplayField>Salary_Expected__c</errorDisplayField>
    <errorMessage>SE is *</errorMessage>
</ValidationRule>